--- a/nrakpo/src/main/resources/templates/photo_download.html
+++ b/nrakpo/src/main/resources/templates/photo_download.html
@@ -2,21 +2,31 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head th:replace="fragments :: head"></head>
-
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <body>
 <div th:replace="fragments :: header"></div>
-<table>
+<div class="container-fluid2" style="margin-bottom: 100px;">
+<table style="width: 100%;height:400px;border: 1px solid #e6e6e6;margin-top: 20px; background-color: #fff;text-align: left;">
     <tr>
-        <td><img style="padding-left: 20px; width: 250px; display: inline-block" th:src="${photo.url}"></td>
-        <td><label th:text="${photo.description}"></label></td>
-        <td><label th:text="${photo.date}"></label></td>
-        <td><label  th:text="${photo.username}"></label></td>
-        <td><label th:text="${photo.hashtags}"></label></td>
-        <td><label  th:text="${photo.sizeX}"></label><label>X</label><label th:text="${photo.sizeY}"></label></td>
-        <td><label  th:text="${photo.format}"></label></td>
-        <td><label>Please imagine the photo has the following filters applied:</label><label th:text="${photo.appliedFilters}"></label></td>
+        <td><i class="material-icons w3-xlarge" style="float: left;padding-top: 8px;padding-left: 10px;color: steelblue;">person</i><label  th:text="${photo.username}" style="padding: 10px 0px 0px 10px;font-weight: bold"></label></td>
+    </tr>
+    <tr>
+        <td><img style="padding-left: 10px;width: 250px;height:auto;background-color: rgb(247, 247, 247) ;display: inline-block;margin: 0px;" th:src="${photo.url}"></td>
+    </tr>
+    <tr>
+        <td><label th:text="${photo.description}" style="padding: 10px 0px 0px 10px;"></label> <label th:text="${photo.hashtags}" style="color:  rgb(20, 85, 204);"></label></td>
+    </tr>
+    <tr>
+        <td><label  th:text="${photo.sizeX}" style="padding-left: 10px;"></label><label>X</label><label th:text="${photo.sizeY}"></label> <label  th:text="${photo.format}"></label></td>
+    </tr>
+    <tr>
+        <td><label th:text="${photo.date}" style="padding: 0px 0px 0px 10px;"></label></td>
+    </tr>
+    <tr>
+        <td><label style="padding-left: 10px;">Please imagine the photo has the following filters applied: </label><label th:text="${photo.appliedFilters}" style="color: rgb(20, 85, 204)"></label></td>
     </tr>
 </table>
-
+</div>
 </body>
 </html>
