--- a/nrakpo/src/main/resources/templates/fragments.html
+++ b/nrakpo/src/main/resources/templates/fragments.html
@@ -14,7 +14,7 @@
 <body>
 <div th:fragment="header" style="font-size: 0;margin: 0px; background-color: #fff; padding-top:15px;">
         <div class="media1" >
-                <a th:href="@{/}">
+                <a th:href="@{/home}">
                     <img style="padding-left: 20px; width: 150px;float: left;" th:src="@{/images/crying.jpg}"/>
                     <h1 style="display: inline-block; vertical-align: middle; padding-left: 20px">NRAKPO project</h1>
                 </a>
