--- a/nrakpo/src/main/resources/templates/users.html
+++ b/nrakpo/src/main/resources/templates/users.html
@@ -6,7 +6,7 @@
 <body>
     <div th:replace="fragments :: header" style="border: 1px solid #e6e6e6"></div>
 <div class="container-fluid">
-    <h1 th:text="Home"></h1>
+    <h1 th:text="Users"></h1>
     <div th:if="${param.error}" class="login-error" th:text="Unable to login"></div>
     <div th:if="${param.logout}" class="logout-success" th:text="Logged out!"></div>
 
