--- a/nrakpo/src/main/resources/templates/home.html
+++ b/nrakpo/src/main/resources/templates/home.html
@@ -66,7 +66,7 @@
 
     <div class="pagination-div" style="text-align: center;padding: 10px 0px 10px 0px; border: 1px solid #e6e6e6;background-color: #fff">
     <span th:if="${page.hasPrevious()}">
-        <a th:href="@{/employees(page=${page.number-1},size=${page.size})}">Previous</a>
+        <a th:href="@{/home(page=${page.number-1},size=${page.size})}">Previous</a>
     </span>
         <th:block th:each="i: ${#numbers.sequence(0, page.totalPages - 1)}">
             <span th:if="${page.number == i}" class="selected">[[${i}+1]]</span>
