finish unit test and start integ tests

--- a/nrakpo/src/main/resources/templates/upload.html
+++ b/nrakpo/src/main/resources/templates/upload.html
@@ -46,7 +46,7 @@
         </div>
         <div class="form-row" >
             <div class="col-md-4 mb-3">
-                <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
+<!--                <input type="hidden" name="_csrf" th:value="${_csrf.token}" />-->
                 <input type="submit" value="Submit proposal" class="btn btn-primary" />
             </div>
         </div>
